[e2e] ui(TestApp): Side by side view & out of viewport fixture

--- a/e2e/test-env/src/client/app.css
+++ b/e2e/test-env/src/client/app.css
@@ -1,4 +1,14 @@
-#root > div {
+.testApp > div {
+  width: 50%;  
+}
+
+.testApp {
+  display: flex;
+  justify-content: flex-start;
+  
+}
+
+.rcWrapper {
   border: 2px solid #3d8fd1;
-  margin: 20px;
+  padding-left:50px;
 }
